force-app/main/default/objects/IManage_Folder_Link__c/IManage_Folder_Link__c.object-meta.xml
<CustomObject>
    <label>IManage Folder Link</label>
    <nameField>
        <label>IManage Folder Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IManage Folder Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>