force-app/main/default/objects/IManage_Folder_Link__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Salesforce SObject Id</description>
    <label>EntityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>