force-app/main/default/objects/IManage_Folder_Link__c/fields/iManage_Id__c.field-meta.xml
<CustomField>
    <fullName>iManage_Id__c</fullName>
    <description>iManage Id</description>
    <label>iManage Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>