force-app/main/default/objects/IManage_Folder_Link__c/fields/iManage_Library__c.field-meta.xml
<CustomField>
    <fullName>iManage_Library__c</fullName>
    <description>iManage database</description>
    <label>iManage Library</label>
    <length>255</length>
    <type>Text</type>
</CustomField>